--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-    "scripts": {
-        "start": "concurrently \"npm run server\" \"npm run client\"",
-        "server": "cd backend && npm run dev",
-        "client": "cd frontend && npm start"
-    },
-    "devDependencies": {
-        "concurrently": "^9.1.2"
-    }
+  "scripts": {
+    "start": "set NODE_OPTIONS=--openssl-legacy-provider && concurrently \"npm run server\" \"npm run client\"",
+    "server": "cd backend && npm run dev",
+    "client": "cd frontend && npm start"
+  },
+  "devDependencies": {
+    "concurrently": "^9.1.2"
+  }
 }
