feat: register user complete

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,8 @@
     "@testing-library/user-event": "^13.5.0",
     "aphrodite": "^2.4.0",
     "axios": "^1.8.3",
+    "bootstrap": "^5.3.3",
+    "framer-motion": "^12.5.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.3.0",
