--- a/frontend/package.json
+++ b/frontend/package.json
@@ -51,5 +51,6 @@
     "postcss": "^8.5.3",
     "prettier": "^3.5.3"
   },
-  "proxy": "http://localhost:5000"
+  "proxy": "http://localhost:5000",
+  "homepage": "."
 }
