--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,10 @@
 {
   "rewrites": [
-    { "source": "/api/(.*)", "destination": "/api/index.js" },
+    { "source": "/api/(.*)", "destination": "/api/server.js" },
     { "source": "/(.*)", "destination": "/frontend/build/$1" }
   ],
   "builds": [
-    { "src": "api/index.js", "use": "@vercel/node" },
+    { "src": "api/server.js", "use": "@vercel/node" },
     {
       "src": "frontend/package.json",
       "use": "@vercel/static-build",
