feat: updated vercel.json

--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,5 @@
 {
-  "rewrites": [
-    { "source": "/api/(.*)", "destination": "/api/server.js" },
-    { "source": "/(.*)", "destination": "/frontend/build/$1" }
-  ],
+  "rewrites": [{ "source": "/api/(.*)", "destination": "/api/server.js" }],
   "builds": [
     { "src": "api/server.js", "use": "@vercel/node" },
     {
