--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -1,10 +1,14 @@
-# Build Backend
+# Use Node.js base image
 FROM node:20-alpine AS backend
-WORKDIR /app/backend
+
+# Set working directory to /app/api
+WORKDIR /app/api
+
+# Copy only the backend package.json and package-lock.json
+COPY api/package.json api/package-lock.json ./
 
 # Install dependencies
-COPY package.json package-lock.json ./
-RUN npm install
+RUN npm install --omit=dev && npm install -g nodemon
 
 # Inject environment variables
 ARG PG_USER
@@ -23,11 +27,11 @@ ENV PG_PORT=$PG_PORT
 ENV JWT_SECRET=$JWT_SECRET
 ENV JWT_EXPIRES_IN=$JWT_EXPIRES_IN
 
-# Copy source code
-COPY . .
+# Copy only the API source code
+COPY api/. .
 
 # Expose API port
 EXPOSE 5000
 
 # Start backend server
-CMD ["npm", "start"]
+CMD ["npx", "nodemon", "server.js"]
