--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,10 +15,12 @@
     "axios": "^1.8.3",
     "bootstrap": "^5.3.3",
     "framer-motion": "^12.5.0",
+    "lucide-react": "^0.483.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.3.0",
     "react-scripts": "^5.0.1",
+    "react-select": "^5.10.1",
     "styled-components": "^6.1.15",
     "web-vitals": "^2.1.4"
   },
