--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@radix-ui/react-progress": "^1.1.2",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
@@ -23,6 +24,7 @@
     "react-scripts": "^5.0.1",
     "react-select": "^5.10.1",
     "styled-components": "^6.1.15",
+    "tailwindcss": "^4.0.17",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
