--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,8 @@
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@radix-ui/react-progress": "^1.1.2",
+    "@react-pdf-viewer/core": "^3.12.0",
+    "@react-pdf-viewer/default-layout": "^3.12.0",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
@@ -15,16 +17,25 @@
     "aphrodite": "^2.4.0",
     "axios": "^1.8.3",
     "bootstrap": "^5.3.3",
+    "draft-js": "^0.11.7",
     "framer-motion": "^12.5.0",
     "lucide-react": "^0.483.0",
+    "mammoth": "^1.9.0",
+    "office-js": "^0.1.0",
+    "pdfjs-dist": "^3.10.111",
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.9",
     "react-dom": "^19.0.0",
+    "react-dropzone": "^14.3.8",
+    "react-konva": "^19.0.3",
+    "react-player": "^2.16.0",
+    "react-quill": "^0.0.2",
     "react-router-dom": "^7.3.0",
     "react-scripts": "^5.0.1",
     "react-select": "^5.10.1",
     "styled-components": "^6.1.15",
     "tailwindcss": "^4.0.17",
+    "video.js": "^8.22.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
