--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@draft-js-plugins/static-toolbar": "^4.1.4",
     "@fortawesome/fontawesome-svg-core": "^6.7.2",
     "@fortawesome/free-regular-svg-icons": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
@@ -14,10 +15,15 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
     "@testing-library/user-event": "^13.5.0",
+    "ajv": "^8.17.1",
+    "ajv-keywords": "^5.1.0",
     "aphrodite": "^2.4.0",
     "axios": "^1.8.3",
     "bootstrap": "^5.3.3",
-    "draft-js": "^0.11.7",
+    "draft-js": "^0.11.5",
+    "draft-js-buttons": "^2.0.2",
+    "draft-js-plugins-editor": "^3.0.0",
+    "draft-js-static-toolbar-plugin": "^3.0.1",
     "framer-motion": "^12.5.0",
     "lucide-react": "^0.483.0",
     "mammoth": "^1.9.0",
@@ -29,7 +35,6 @@
     "react-dropzone": "^14.3.8",
     "react-konva": "^19.0.3",
     "react-player": "^2.16.0",
-    "react-quill": "^0.0.2",
     "react-router-dom": "^7.3.0",
     "react-scripts": "^5.0.1",
     "react-select": "^5.10.1",
@@ -65,7 +70,8 @@
   "devDependencies": {
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.3",
-    "prettier": "^3.5.3"
+    "prettier": "^3.5.3",
+    "sass": "^1.86.3"
   },
   "homepage": "/"
 }
