feat: added support for video

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
     "@testing-library/user-event": "^13.5.0",
+    "@videojs/themes": "^1.0.1",
     "ajv": "^8.17.1",
     "ajv-keywords": "^5.1.0",
     "aphrodite": "^2.4.0",
