--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@botpress/webchat": "2.3",
     "@cyntler/react-doc-viewer": "^1.17.0",
     "@draft-js-plugins/static-toolbar": "^4.1.4",
     "@fortawesome/fontawesome-svg-core": "^6.7.2",
@@ -31,9 +32,9 @@
     "mammoth": "^1.9.0",
     "office-js": "^0.1.0",
     "pdfjs-dist": "^3.10.111",
-    "react": "^19.0.0",
+    "react": "18.3.1",
     "react-bootstrap": "^2.10.9",
-    "react-dom": "^19.0.0",
+    "react-dom": "18.3.1",
     "react-dropzone": "^14.3.8",
     "react-icons": "^5.5.0",
     "react-konva": "^19.0.3",
@@ -45,6 +46,10 @@
     "tailwindcss": "^4.0.17",
     "video.js": "^8.22.0",
     "web-vitals": "^2.1.4"
+  },
+  "overrides": {
+    "react": "18.3.1",
+    "react-dom": "18.3.1"
   },
   "scripts": {
     "start": "react-scripts start",
