--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,6 +28,8 @@
     "draft-js-plugins-editor": "^3.0.0",
     "draft-js-static-toolbar-plugin": "^3.0.1",
     "framer-motion": "^12.5.0",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.1",
     "lucide-react": "^0.483.0",
     "mammoth": "^1.9.0",
     "office-js": "^0.1.0",
